<resources>
    
    <string name="app_name">Coffee Shop</string>
    <string name="order_summary">ORDER SUMMARY</string>
    <string name="quantity">QUANTITY</string>
    <string name="chocolate">Chocolate</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="toppings">TOPPINGS</string>
    <string name="name">Name</string>
    <string name="sign1">-</string>
    <string name="sign2">+</string>
    <string name="sign3">$ 0</string>
    <string name="order">ORDER</string>
    <string name="sign4">0</string>
    
</resources>
