<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:orientation="vertical"
            tools:context=".MainActivity"
            android:layout_marginRight="16dp">

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="textCapWords" />

            <TextView
                android:text="@string/toppings"
                style="@style/customText" />

            <CheckBox
                android:id="@+id/whipped"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="24dp"
                android:text="@string/whipped_cream"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/chocolate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="24dp"
                android:text="@string/chocolate"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/quantity"
                android:text="@string/quantity"
                style="@style/customText" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginRight="8dp"
                    android:onClick="decrement"
                    android:text="@string/sign1" />

                <TextView
                    android:id="@+id/number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign4"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <Button
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginLeft="8dp"
                    android:onClick="increment"
                    android:text="@string/sign2" />

            </LinearLayout>

            <TextView
                android:id="@+id/summary"
                android:text="@string/order_summary"
                style="@style/customText" />

            <TextView
                android:id="@+id/cost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/sign3" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="submitOrder"
                android:text="@string/order" />
            
        </LinearLayout>
</ScrollView>
